--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <br>IBM SPSS (Basic)
             <br>Sublime Text (HTML, CSS, Javascript) (Basic)
             <br>GitHub
+            <br>>70 WPM in Typing (10 Fingers)
             </p>
             <h1></h1>LANGUAGES
             <p>
