--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
+    <title>Experiences & Skills</title>
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -15,6 +15,9 @@
             </ul>
         </nav>
         <div class="detel">
+            <h1>My <span>Experience</span></h1>
+            <h1></h1>PT PLN UID Jateng DIY (Intern)
+            <br>Distribution Efficiency and Quality Measurement (EPM)
             <h1>My <span>Skills</span></h1>
             <h1></h1>SKILLS
             <p>
@@ -28,7 +31,7 @@
             <h1></h1>LANGUAGES
             <p>
             <br>Bahasa Indoneis
-            <br>Englis
+            <br>English
             <br>Spanish (A2)
             </p>
         </div>
